@@ -101,6 +101,8 @@ Version CVS HEAD (?)
 	  the instruments DB file is located in
 	  %USERPROFILE%\.linuxsampler\instruments.db which allows different
 	  databases for each windows user
+	  if no DB is present it automatically creates the .linuxsampler subdir 
+	  and then creates an empty DB
 
   * Gigasampler format engine:
     - fixed a memory leak that could happen when a channel was deleted
